<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="account"
            type="ir.mrhib.dong.model.Account" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintCircleRadius="25dp">

        <TextView
            android:id="@+id/tv_account_title_confirmation_rext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titr"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_delete_this_account"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_account_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titr"
            android:gravity="center"
            android:text="@{account.account_name}"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_account_title_confirmation_rext" />

        <TextView
            android:id="@+id/tv_account_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/by_deleting_account_all_related_persons_and_expenses_will_be_deleted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_account_title" />

        <Button
            android:id="@+id/btnDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#A50000"
            android:fontFamily="@font/titr"
            android:text="@string/sure_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_account_subtitle" />

        <Button
            android:id="@+id/btnCancelDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#017997"
            android:fontFamily="@font/titr"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnDeleteAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>