<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="person"
            type="ir.mrhib.dong.model.Person" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintCircleRadius="25dp">

        <TextView
            android:id="@+id/tv_person_name_confirmation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/are_you_sure"
            android:textStyle="bold"
            android:textColor="#000"
            android:fontFamily="@font/titr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{person.person_name}"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:fontFamily="@font/titr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_person_name_confirmation_text" />

        <TextView
            android:id="@+id/tv_person_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/by_deleting_person_all_related_expenses_will_be_deleted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_person_name" />

        <Button
            android:id="@+id/btnDeletePerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#A50000"
            android:text="@string/sure_delete"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/titr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_person_subtitle" />

        <Button
            android:id="@+id/btnCancelDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#017997"
            android:fontFamily="@font/titr"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnDeletePerson" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>