<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="expense"
            type="ir.mrhib.dong.model.ExpenseWithPerson" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintCircleRadius="25dp">

        <TextView
            android:id="@+id/tv_person_name_confirmation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000"
            android:fontFamily="@font/titr"
            android:text="@string/are_you_sure_you_want_to_delete_this_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_expense_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{expense.expense.ex_title}"
            android:textSize="18sp"
            android:textColor="#000"
            android:fontFamily="@font/titr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_person_name_confirmation_text" />

        <TextView
            android:id="@+id/tv_expense_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@{@string/price + ` `  + expense.expense.ex_price + `  `+ @string/price_unit+`\n` + @string/payer_person+`  ` + expense.person.person_name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_expense_title" />

        <Button
            android:id="@+id/btnDeleteExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#A50000"
            android:text="@string/sure_delete"
            android:fontFamily="@font/titr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_expense_subtitle" />

        <Button
            android:id="@+id/btnCancelDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#017997"
            android:text="@string/cancel"
            android:fontFamily="@font/titr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnDeleteExpense" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>